Add basic description of project

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>MapleMesh.org - Under Construction</title>
   </head>
   <body>
-    Coming soon!
+    <p>Coming soon!</p>
+    <p>MapleMesh is a community organization working to build and maintain a local, resilient communications infrastructure based on LoRa mesh radios in Maple Valley and the surrounding communities.</p>
   </body>
 </html>
